[package]
name = "pqc-secure-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_bytes = "0.11"
rand = "0.8"
ml-kem = "0.3"
ml-dsa = "0.1"
signature = "2.2"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
subtle = "2.5"
zeroize = "1.8"
